--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+          <button id="copy">Copy</button>
         </div>
       </div>
     </div>
